Fixed the file button.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="buttons/editor.js"></script>
         <script src="buttons/start.js"></script>
         <script src="buttons/list.js"></script>
+        <script src="buttons/list_button.js"></script>
         <script src="buttons/obj_list.js"></script>
         <script src="buttons/obj_grid.js"></script>
         <script src="buttons/obj_grid_draw.js"></script>
