Got a start on fixing the "Stop" button.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <script src="buttons/obj_grid.js"></script>
         <script src="buttons/obj_grid_draw.js"></script>
         <script src="buttons/editor_save.js"></script>
+        <script src="buttons/move.js"></script>
+        <script src="buttons/stop.js"></script>
         <script src="levels/title.js"></script>
         <script src="levels/test_level.js"></script>
         <script src="levels/editor.js"></script>
