--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <script src="hud_element.js"></script>
         <script src="buttons/editor.js"></script>
         <script src="buttons/start.js"></script>
-        <script src="buttons/list.js"></script>
+        <script src="buttons/modal.js"></script>
+        <script src="buttons/modal_obj_list.js"></script>
         <script src="buttons/list_button.js"></script>
+        <script src="buttons/list.js"></script>
         <script src="buttons/obj_list.js"></script>
         <script src="buttons/obj_grid.js"></script>
         <script src="buttons/obj_grid_draw.js"></script>
         <script src="buttons/editor_save.js"></script>
+        <script src="buttons/editor_design.js"></script>
         <script src="buttons/move.js"></script>
         <script src="buttons/stop.js"></script>
         <script src="levels/title.js"></script>
