--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="buttons/modal_obj_list.js"></script>
         <script src="buttons/list_button.js"></script>
         <script src="buttons/list.js"></script>
+        <script src="buttons/list_objects.js"></script>
         <script src="buttons/obj_list.js"></script>
         <script src="buttons/obj_grid.js"></script>
         <script src="buttons/obj_grid_draw.js"></script>
