form for entering path vectors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="buttons/start.js"></script>
         <script src="buttons/modal.js"></script>
         <script src="buttons/modal_obj_list.js"></script>
+        <script src="buttons/modal_path_editor.js"></script>
         <script src="buttons/list_button.js"></script>
         <script src="buttons/list.js"></script>
         <script src="buttons/list_objects.js"></script>
