preview complete for path editor

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script src="levels/title.js"></script>
         <script src="levels/test_level.js"></script>
         <script src="levels/editor.js"></script>
+        <script src="lib/math.js"></script>
     </head>
 
     <body oncontextmenu="return false;">
